tests/typing/good/testfile-const-1.rs


const ONE : usize = 1;


pub fn main() {
    let v = vec![1, 2];
    let y = v[ONE];
}