tests/typing/bad/testfile-neg-u32.rs
fn one() -> u32 {
    1
}

fn main() {
    let x = -one();
}